--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Feb 13 2024 11:48:16 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Feb 14 2024 16:47:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="653a8921fc5a7faacf1e66c1" data-wf-site="650ebe656cf62f0b69298038">
 <head>
   <meta charset="utf-8">
@@ -19,30 +19,76 @@
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon"><!--  Memberstack webflow package  -->
   <script data-memberstack-app="app_clqmvp45w00ax0tqg049r2tzc" src="https://static.memberstack.com/scripts/v1/memberstack.js" type="text/javascript"></script>
-  <script defer="" src="js/test.js"></script>
+  <script defer="" src="http://127.0.0.1:5500/login.js"></script>
 </head>
 <body>
-  <section class="section-4">
-    <a href="/login">Sign in</a>
-    <a href="/register">Sign up</a>
-    <div id="sign-up-form" class="form-wrapper">
-      <h1 class="form_title" id="index-title">Create an Account</h1>
-      <div class="w-form">
-        <form id="sign-up-form" name="wf-form-signup" data-name="signup" redirect="/log-in-ms" data-redirect="/log-in-ms" method="get" data-ms-form="signup" data-wf-page-id="653a8921fc5a7faacf1e66c1" data-wf-element-id="4654159f-a7d3-5509-de34-8b9979e5fc12">
-          <div>
-            <div><label for="su-username" class="field_label">Username</label><input class="text_field w-input" maxlength="256" name="First-Name-2" data-name="First Name 2" placeholder="e.g. Howard" type="text" id="su-username" data-ms-member="username" required=""></div>
-          </div>
-          <div class="text-field-wrapper"><label for="su-email" class="field_label">Email</label><input class="text_field w-input" maxlength="256" name="Email-3" data-name="Email 3" placeholder="e.g. howard.thurman@gmail.com" type="email" id="su-email" data-ms-member="email" required=""></div>
-          <div><label for="su-pass" class="field_label">Password</label><input data-show="true" class="text_field w-input" maxlength="256" name="Password-3" data-name="Password 3" placeholder="" type="password" id="su-pass" data-ms-member="password" required=""></div><input type="submit" data-wait="Please wait..." class="form_submit_button w-button" value="Sign Up">
-        </form>
-        <div class="w-form-done">
-          <div>Thank you! Your submission has been received!</div>
+  <section class="section home">
+    <div class="max_width_wrapper menu">
+      <a href="/register" class="button signup w-button">Sign Up</a>
+      <a href="/login" class="button login w-button">Log In</a>
+    </div>
+    <div class="max_width_wrapper home_desc">
+      <h1 class="h1 home">What We Do</h1>
+      <div class="text home">We are a team of skilled bettors who leverage mathematical analysis to find lucrative betting opportunities for our clients. Join us on our journey as we use data-driven strategies to maximise returns and deliver value to our clients.</div>
+    </div>
+    <div class="max_width_wrapper home_stats">
+      <div class="home_stat_holders">
+        <div class="home_stat_holder">
+          <h1 class="h3 home">£26,193</h1>
+          <h1 class="h3 home desc">Client Earnings</h1>
         </div>
-        <div class="w-form-fail">
-          <div>Oops! Something went wrong while submitting the form.</div>
+        <div class="home_stat_holder">
+          <h1 class="h3 home">65</h1>
+          <h1 class="h3 home desc">Clients</h1>
+        </div>
+        <div class="home_stat_holder">
+          <h1 class="h3 home">£402.97</h1>
+          <h1 class="h3 home desc">Av Client Earnings</h1>
         </div>
       </div>
     </div>
+    <div class="max_width_wrapper home_faq">
+      <h1 class="h1 home">FAQs</h1>
+      <div class="faq_container">
+        <div class="faq_question">
+          <h1 class="h2 home">Why do you need our accounts?</h1><img src="images/down-arrow.png" loading="lazy" alt="" class="image-13">
+        </div>
+        <div class="faq_answer">
+          <div id="homefaq-1" class="text white faq_a">If we&#x27;re so successful at betting, why rely on others&#x27; accounts? <br><br>Simple - bookmakers frown upon consistently winning players like us. <br><br>Our personal accounts face scrutiny, so we&#x27;ve shifted to betting on client accounts. This way, we share profits with clients while circumventing bookmakers&#x27; restrictions, ensuring success and in turn profit for everyone involved.</div>
+        </div>
+        <div class="faq_question">
+          <h1 class="h2 home">What does the law say?</h1><img src="images/down-arrow.png" loading="lazy" alt="" class="image-13">
+        </div>
+        <div class="faq_answer">
+          <div id="homefaq-2" class="text white faq_a">While our approach may raise eyebrows, rest assured that we&#x27;ve developed this website with the guidance of a seasoned legal expert. Every aspect has been carefully reviewed to ensure full compliance with all legal requirements.</div>
+        </div>
+        <div class="faq_question">
+          <h1 class="h2 home">Will this affect my credit score?</h1><img src="images/down-arrow.png" loading="lazy" alt="" class="image-13">
+        </div>
+        <div class="faq_answer">
+          <div id="homefaq-3" class="text white faq_a">No - all deposits will be done through debit cards and therefore will have no affect on your credit score.</div>
+        </div>
+        <div class="faq_question">
+          <h1 class="h2 home">Will you use my money?</h1><img src="images/down-arrow.png" loading="lazy" alt="" class="image-13">
+        </div>
+        <div class="faq_answer">
+          <div id="homefaq-4" class="text white faq_a">None - all money will be provided us, as explained when you create your account.</div>
+        </div>
+        <div class="faq_question">
+          <h1 class="h2 home">Can I use the accounts afterwards?</h1><img src="images/down-arrow.png" loading="lazy" alt="" class="image-13">
+        </div>
+        <div class="faq_answer">
+          <div id="homefaq-5" class="text white faq_a">Yes - the bookmakers will allow you to casually gamble even after your account is under review.</div>
+        </div>
+      </div>
+    </div>
+    <div class="max_width_wrapper home_desc">
+      <h1 class="h2 home">Our Methods</h1>
+      <div class="text home"><strong>Matched Betting<br><br></strong>We take advantage of all things matched betting. With hundreds of scripts at our disposal, we efficiently navigate through sign-up offers, extra-place offers, Best Odds guaranteed promotions, and more. Whenever bookmakers roll out a new promotion, rest assured that we - and by extension, you -will be poised to profit from it.</div>
+      <div class="text home"><strong>Advantage Betting<br>‍<br>Horse Racing<br><br></strong>Every bookmaker offers each way odds for every horse across all horse meets they cover. Recognising the consistent mispricing in these odds, we&#x27;ve developed scripts to pinpoint and capitalise on these lucrative opportunities.<br><br><strong>Other Sports<br><br></strong>UK bookmakers set their odds based on the flow of money to a specific outcome among other factors.<br><br>For example if Arsenal were playing Tottenham and there is a sudden increase in the amount of bets placed for Arsenal to win due to news of an injury to a Tottenham player, bookmakers will lower the odds for Arsenal accordingly.<br><br>However bookmakers are quick to stop &#x27;smart&#x27; gamblers. Therefore, the amount of money being placed based on this change of information will be lower and odds will be slower to move. <br><br>Hence we have scripts that leverage this slow movement of odds to find us these opportunities.<br><br><strong>PLEASE NOTE: This is not betting advice -  there is a lot more to these strategies and our scripts than explained above - including leveraging foreign market odds, hedging positions and detecting false market movements. Attempts to follow the above strategies without proper software could result in large financial loss.<br></strong></div>
+    </div>
   </section>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=650ebe656cf62f0b69298038" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="js/webflow.js" type="text/javascript"></script>
 </body>
 </html>
