--- a/public/affiliate.html
+++ b/public/affiliate.html
@@ -32,8 +32,8 @@
           <h1 class="item_title">Accounts</h1>
         </div>
         <a href="/users" class="menu_button enabled w-button">Overview</a>
-        <a href="bookmakers.html" class="menu_button w-button">Accounts</a>
-        <a href="deposits.html" class="menu_button w-button">Deposits</a>
+        <a href="/bookmakers" class="menu_button w-button">Accounts</a>
+        <a href="/deposits" class="menu_button w-button">Deposits</a>
         <a href="/affiliate" aria-current="page" class="menu_button active w-button w--current">Affiliate</a>
         <div id="deposits-menu-button" class="menu_button enabled deposits"><img src="images/upload.png" loading="lazy" alt="" class="image-5">
           <h1 class="item_title">Deposits</h1>
