--- a/public/deposits.html
+++ b/public/deposits.html
@@ -31,10 +31,10 @@
         <div id="accounts-menu-button" class="menu_button enabled accounts"><img src="images/user-5.png" loading="lazy" alt="" class="image-5">
           <h1 class="item_title">Accounts</h1>
         </div>
-        <a href="dashboard.html" class="menu_button w-button">Overview</a>
-        <a href="bookmakers.html" class="menu_button w-button">Accounts</a>
-        <a href="deposits.html" aria-current="page" class="menu_button active w-button w--current">Deposits</a>
-        <a href="affiliate.html" class="menu_button w-button">Affiliate</a>
+        <a href="/users" class="menu_button w-button">Overview</a>
+        <a href="/bookmakers" class="menu_button w-button">Accounts</a>
+        <a href="/deposits" aria-current="page" class="menu_button active w-button w--current">Deposits</a>
+        <a href="/affiliate" class="menu_button w-button">Affiliate</a>
         <div id="deposits-menu-button" class="menu_button enabled deposits"><img src="images/upload.png" loading="lazy" alt="" class="image-5">
           <h1 class="item_title">Deposits</h1>
         </div>
