--- a/public/affiliate.html
+++ b/public/affiliate.html
@@ -33,8 +33,7 @@
         </div>
         <a href="/users" class="menu_button enabled w-button">Overview</a>
         <a href="/bookmakers" class="menu_button w-button">Accounts</a>
-        <a href="#" class="menu_button disabled w-button">Deposits</a>
-        <a href="/deposits" class="menu_button hidden w-button">Deposits</a>
+        <a href="#" class="menu_button hidden w-button">Deposits</a>
         <a href="/affiliate" aria-current="page" class="menu_button active w-button w--current">Affiliate</a>
         <div id="deposits-menu-button" class="menu_button enabled deposits"><img src="images/upload.png" loading="lazy" alt="" class="image-5">
           <h1 class="item_title">Deposits</h1>
