--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -35,8 +35,7 @@
         <a href="/users" aria-current="page" class="menu_button active w-button w--current">Overview</a>
         <a href="#" class="menu_button disabled w-button">Accounts</a>
         <a id="account-menu" href="/bookmakers" class="menu_button hidden w-button">Accounts</a>
-        <a href="#" class="menu_button disabled w-button">Deposits</a>
-        <a id="deposits-menu" href="/deposits" class="menu_button hidden w-button">Deposits</a>
+        <a id="deposits-menu" href="#" class="menu_button hidden w-button">Deposits</a>
         <a href="/affiliate" class="menu_button w-button">Affiliate</a>
         <div id="deposits-menu-button" class="menu_button enabled deposits"><img src="images/upload.png" loading="lazy" alt="" class="image-5">
           <h1 class="item_title">Deposits</h1>
