adding faq functionality

--- a/public/affiliate.html
+++ b/public/affiliate.html
@@ -42,7 +42,7 @@
     </div>
     <div id="container4" class="container affiliate">
       <div class="generate_affiliate_code">
-        <h1 class="affiliate_generate_title">Your Affiliate Code</h1>
+        <h1 class="affiliate_generate_title">We are currently developing our affiliate system further - please come back tomorrow to see changes (any existing affiliates will be carried over)</h1>
         <h1 id="affiliate-code" class="affiliate_code_found">Code Not Found</h1>
         <div class="information_holder visible">
           <div id="affiliate-info" class="text-block-2 white visible"><strong>Code</strong><br><br>Your affiliate code is provided above. If you successfully refer someone to sign up, instruct them to input this code in the designated form located at the bottom of their overview section so you can be rewarded.<br><br><strong>Earnings<br><br></strong>Upon successfully referring an individual, you will receive an instant credit of £40 for each person referred.<br><br><strong>Getting Paid<br><br></strong>The credited amount of £40 for each referral will be transferred to your provided bank details within 24 hours of the affiliate code being applied, with no additional conditions or requirements.<br></div>
