--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon"><!--  Memberstack webflow package  -->
-  <script data-memberstack-app="app_clqmvp45w00ax0tqg049r2tzc" src="https://static.memberstack.com/scripts/v1/memberstack.js" type="text/javascript"></script>
-  <script defer="" src="http://127.0.0.1:5500/login.js"></script>
+  <script defer="" src="js/home.js" type="text/javascript"></script>
 </head>
 <body>
   <section class="section home">
@@ -50,31 +49,31 @@
     <div class="max_width_wrapper home_faq">
       <h1 class="h1 home">FAQs</h1>
       <div class="faq_container">
-        <div class="faq_question">
+        <div id="home-trigger-1" class="faq_question">
           <h1 class="h2 home">Why do you need our accounts?</h1><img src="images/down-arrow.png" loading="lazy" alt="" class="image-13">
         </div>
         <div class="faq_answer">
           <div id="homefaq-1" class="text white faq_a">If we&#x27;re so successful at betting, why rely on others&#x27; accounts? <br><br>Simple - bookmakers frown upon consistently winning players like us. <br><br>Our personal accounts face scrutiny, so we&#x27;ve shifted to betting on client accounts. This way, we share profits with clients while circumventing bookmakers&#x27; restrictions, ensuring success and in turn profit for everyone involved.</div>
         </div>
-        <div class="faq_question">
+        <div id="home-trigger-2" class="faq_question">
           <h1 class="h2 home">What does the law say?</h1><img src="images/down-arrow.png" loading="lazy" alt="" class="image-13">
         </div>
         <div class="faq_answer">
           <div id="homefaq-2" class="text white faq_a">While our approach may raise eyebrows, rest assured that we&#x27;ve developed this website with the guidance of a seasoned legal expert. Every aspect has been carefully reviewed to ensure full compliance with all legal requirements.</div>
         </div>
-        <div class="faq_question">
+        <div id="home-trigger-3" class="faq_question">
           <h1 class="h2 home">Will this affect my credit score?</h1><img src="images/down-arrow.png" loading="lazy" alt="" class="image-13">
         </div>
         <div class="faq_answer">
           <div id="homefaq-3" class="text white faq_a">No - all deposits will be done through debit cards and therefore will have no affect on your credit score.</div>
         </div>
-        <div class="faq_question">
+        <div id="home-trigger-4" class="faq_question">
           <h1 class="h2 home">Will you use my money?</h1><img src="images/down-arrow.png" loading="lazy" alt="" class="image-13">
         </div>
         <div class="faq_answer">
           <div id="homefaq-4" class="text white faq_a">None - all money will be provided us, as explained when you create your account.</div>
         </div>
-        <div class="faq_question">
+        <div id="home-trigger-5" class="faq_question">
           <h1 class="h2 home">Can I use the accounts afterwards?</h1><img src="images/down-arrow.png" loading="lazy" alt="" class="image-13">
         </div>
         <div class="faq_answer">
