fix typo on homepage

--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
           <h1 class="h2 home">Will you use my money?</h1><img src="images/down-arrow.png" loading="lazy" alt="" class="image-13">
         </div>
         <div class="faq_answer">
-          <div id="homefaq-4" class="text white faq_a">None - all money will be provided us, as explained when you create your account.</div>
+          <div id="homefaq-4" class="text white faq_a">No - all money will be provided us, as explained when you create your account.</div>
         </div>
         <div id="home-trigger-5" class="faq_question">
           <h1 class="h2 home">Can I use the accounts afterwards?</h1><img src="images/down-arrow.png" loading="lazy" alt="" class="image-13">
