--- a/public/users.html
+++ b/public/users.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Feb 14 2024 21:26:42 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Feb 15 2024 16:57:12 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="658d9d61bddb427e1206a154" data-wf-site="650ebe656cf62f0b69298038">
 <head>
   <meta charset="utf-8">
@@ -16,6 +16,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon"><!--  Memberstack webflow package  -->
+  <script data-memberstack-app="app_clqmvp45w00ax0tqg049r2tzc" src="https://static.memberstack.com/scripts/v1/memberstack.js" type="text/javascript"></script>
   <script defer="" src="js/dashboard.js" type="text/javascript"></script>
   <script defer="" src="js/bookmakers.js" type="text/javascript"></script>
 </head>
@@ -27,19 +28,50 @@
         <h1 id="menu-name" class="h3 welcome_name">Heading</h1>
       </div>
       <div class="menu_items">
-        <div id="overview-menu-button" class="menu_button enabled"><img src="images/file-1.png" loading="lazy" alt="" class="image-5">
+        <div id="overview-menu-button" class="menu_button enabled active">
           <h1 class="item_title">Overview</h1>
         </div>
-        <div id="accounts-menu-button" class="menu_button enabled"><img src="images/user-5.png" loading="lazy" alt="" class="image-5">
-          <h1 class="item_title">Accounts</h1>
-        </div>
-        <div class="menu_button disabled"><img src="images/padlock.png" loading="lazy" alt="" class="image-5">
-          <h1 class="item_title disabled">Accounts</h1>
+        <div class="accounts_menu_div">
+          <div id="accounts-menu-button" class="menu_button enabled">
+            <h1 class="item_title">Accounts</h1><img src="images/down-arrow_1.png" loading="lazy" alt="" class="image-14">
+            <div id="accounts-menu-button" class="menu_button enabled accounts"><img src="images/user-5.png" loading="lazy" alt="" class="image-5">
+              <h1 class="item_title">Accounts</h1>
+            </div>
+          </div>
+          <div id="sub-menu" class="sub_menu">
+            <div id="submenu-1" class="menu_button enabled submenu">
+              <h1 id="submenu-1" class="item_title">Stage 1</h1>
+            </div>
+            <div id="submenu-2" class="menu_button enabled submenu">
+              <h1 class="item_title">Stage 2</h1>
+            </div>
+            <div id="submenu-3" class="menu_button enabled submenu">
+              <h1 class="item_title disabled">Stage 3</h1>
+            </div>
+            <div id="submenu-4" class="menu_button enabled submenu">
+              <h1 class="item_title disabled">Stage 4</h1>
+            </div>
+            <div id="submenu-5" class="menu_button enabled submenu">
+              <h1 class="item_title disabled">Stage 5</h1>
+            </div>
+            <div id="submenu-6" class="menu_button enabled submenu">
+              <h1 class="item_title disabled">Stage 6</h1>
+            </div>
+            <div id="submenu-7" class="menu_button enabled submenu">
+              <h1 class="item_title disabled">Stage 7</h1>
+            </div>
+            <div id="submenu-8" class="menu_button enabled submenu">
+              <h1 class="item_title disabled">Stage 8</h1>
+            </div>
+            <div id="submenu-9" class="menu_button enabled submenu">
+              <h1 class="item_title disabled">Stage 9</h1>
+            </div>
+          </div>
         </div>
         <div id="deposits-menu-button" class="menu_button enabled deposits"><img src="images/upload.png" loading="lazy" alt="" class="image-5">
           <h1 class="item_title">Deposits</h1>
         </div>
-        <div class="menu_button enabled"><img src="images/affiliate-marketing.png" loading="lazy" alt="" class="image-5">
+        <div class="menu_button enabled">
           <h1 class="item_title">Affiliate</h1>
         </div>
       </div>
@@ -56,7 +88,7 @@
               <h1 class="deposits money profit_text">Our Funds</h1>
               <h1 id="deposits-withdrawal-counter" class="deposits money withdrawals text">£0</h1>
               <div class="more_info_holder">
-                <div class="text-block-2 black">More Info</div><img src="images/down-arrow-1.png" loading="lazy" alt="" class="image-10">
+                <div class="text-block-2 black">More Info</div><img src="images/down-arrow_1.png" loading="lazy" alt="" class="image-10">
               </div>
               <div class="information_holder">
                 <div class="text-block-2 black">This represents the total of our funds in your bookmaker accounts/ provided to you through transfers. <br><br><strong>Please note </strong>our systems will update this figure whenever money is withdrawn - it may take a few days for it to actually appear in your account.<br>‍<br>Upon completing new deposits, our system will deduct this value from the total.<br></div>
@@ -70,7 +102,7 @@
               <h1 class="deposits money our_text">Net Balance</h1>
               <h1 id="deposits-net-counter" class="deposits money our_text counter">£0</h1>
               <div class="more_info_holder">
-                <div class="text-block-2 black">More Info</div><img src="images/down-arrow-1.png" loading="lazy" alt="" class="image-10">
+                <div class="text-block-2 black">More Info</div><img src="images/down-arrow_1.png" loading="lazy" alt="" class="image-10">
               </div>
               <div class="information_holder">
                 <div class="text-block-2 black">This represents the current balance of all funds associated with your account.<br><br><strong>Positive<br><br></strong>You currently owe us funds, which can be utilized for new account deposits (see required deposits below). <br><br><strong>We reserve the right to request these funds at any time, so any misuse of them conflicts with the signed contract and may result in legal action be taken against you.<br><br>Negative<br><br></strong>This indicates an owed amount to be credited when future accounts are made, in addition to covering any required funds for new deposits.<br></div>
