--- a/public/support.html
+++ b/public/support.html
@@ -67,7 +67,7 @@
       <div class="support_holder">
         <div class="support_search_box accounts">
           <div class="w-form">
-            <form id="support-find-accounts" name="email-form" data-name="Email Form" method="get" data-wf-page-id="65a04721a7c824e1e11ae7de" data-wf-element-id="d2965c3a-7a9a-921b-3c5f-c705e2a1147b"><label for="support-find-id-accounts" class="field_label">ID</label><input class="text_field w-input" maxlength="256" name="ID" data-name="ID" placeholder="Enter ID" type="text" id="support-find-id-accounts" required=""><input type="submit" data-wait="Please wait..." class="form_submit_button w-button" value="Find Accounts"></form>
+            <form id="support-find-accounts" name="email-form" data-name="Email Form" method="get"><label for="support-find-id-accounts" class="field_label">ID</label><input class="text_field w-input" maxlength="256" name="ID" data-name="ID" placeholder="Enter ID" type="text" id="support-find-id-accounts" required=""><input type="submit" data-wait="Please wait..." class="form_submit_button w-button" value="Find Accounts"></form>
           </div>
         </div>
         <div class="support_money_container">
@@ -98,25 +98,13 @@
                 </div>
                 <div class="support_accounts_new_deposit">
                   <div class="w-form">
-                    <form id="support-add-deposit" name="email-form" data-name="Email Form" method="get" class="supportadddeposit" data-wf-page-id="65a04721a7c824e1e11ae7de" data-wf-element-id="1d744166-6a98-883e-942e-96731e4bd231"><label for="support-add-deposit-amount" class="field_label">Amount</label><input class="text_field w-input" maxlength="256" name="Amount" data-name="Amount" placeholder="" type="text" id="support-add-deposit-amount"><input type="submit" data-wait="Please wait..." class="form_submit_button w-button" value="Create Deposit"></form>
-                    <div class="form_success w-form-done">
-                      <div>Deposit Added!</div>
-                    </div>
-                    <div class="w-form-fail">
-                      <div>Oops! Something went wrong while submitting the form.</div>
-                    </div>
+                    <form id="support-add-deposit" name="email-form" data-name="Email Form" method="get" class="supportadddeposit"><label for="support-add-deposit-amount" class="field_label">Amount</label><input class="text_field w-input" maxlength="256" name="Amount" data-name="Amount" placeholder="" type="text" id="support-add-deposit-amount"><input type="submit" data-wait="Please wait..." class="form_submit_button w-button" value="Create Deposit"></form>
                   </div>
                 </div>
                 <div class="support_account_progress_div">
                   <h1 class="support_accounts_text status">Heading</h1>
                   <div class="w-form">
-                    <form id="support-account-progress-form" name="email-form" data-name="Email Form" method="get" data-wf-page-id="65a04721a7c824e1e11ae7de" data-wf-element-id="51b843c3-ae5f-05ca-b978-3699ca1aab78"><label for="support-account-progress-value" class="field_label">New Value</label><input class="text_field w-input" maxlength="256" name="name" data-name="Name" placeholder="" type="text" id="support-account-progress-value"><input type="submit" data-wait="Please wait..." class="form_submit_button w-button" value="Submit"></form>
-                    <div class="w-form-done">
-                      <div>Thank you! Your submission has been received!</div>
-                    </div>
-                    <div class="w-form-fail">
-                      <div>Oops! Something went wrong while submitting the form.</div>
-                    </div>
+                    <form id="support-account-progress-form" name="email-form" data-name="Email Form" method="get"><label for="support-account-progress-value" class="field_label">New Value</label><input class="text_field w-input" maxlength="256" name="name" data-name="Name" placeholder="" type="text" id="support-account-progress-value"><input type="submit" data-wait="Please wait..." class="form_submit_button w-button" value="Submit"></form>
                   </div>
                 </div>
               </div>
@@ -140,22 +128,10 @@
                 </div>
                 <div class="forms">
                   <div class="form-block-7 w-form">
-                    <form id="support-withdrawal-form" name="email-form" data-name="Email Form" method="get" class="form" data-wf-page-id="65a04721a7c824e1e11ae7de" data-wf-element-id="7061b9bc-20d5-7fc6-8000-52416f0cef3b"><label for="support-withdrawal-amount" class="field_label">Amount</label><input class="text_field w-input" maxlength="256" name="name" data-name="Name" placeholder="" type="text" id="support-withdrawal-amount"><input type="submit" data-wait="Please wait..." class="form_submit_button w-button" value="Add Withdrawal"></form>
-                    <div class="w-form-done">
-                      <div>Thank you! Your submission has been received!</div>
-                    </div>
-                    <div class="w-form-fail">
-                      <div>Oops! Something went wrong while submitting the form.</div>
-                    </div>
+                    <form id="support-withdrawal-form" name="email-form" data-name="Email Form" method="get" class="form"><label for="support-withdrawal-amount" class="field_label">Amount</label><input class="text_field w-input" maxlength="256" name="name" data-name="Name" placeholder="" type="text" id="support-withdrawal-amount"><input type="submit" data-wait="Please wait..." class="form_submit_button w-button" value="Add Withdrawal"></form>
                   </div>
                   <div class="w-form">
-                    <form id="support-profit-form" name="email-form" data-name="Email Form" method="get" class="form-2" data-wf-page-id="65a04721a7c824e1e11ae7de" data-wf-element-id="80ee3240-3fc9-b16f-8f69-d8da56d9595b"><label for="support-profit-amount" class="field_label">Amount</label><input class="text_field w-input" maxlength="256" name="name" data-name="Name" placeholder="" type="text" id="support-profit-amount"><label for="support-profit-ratio" class="field_label">Ratio</label><input class="text_field w-input" maxlength="256" name="email" data-name="Email" placeholder="" type="text" id="support-profit-ratio" required=""><input type="submit" data-wait="Please wait..." class="form_submit_button w-button" value="Add Profit"></form>
-                    <div class="w-form-done">
-                      <div>Thank you! Your submission has been received!</div>
-                    </div>
-                    <div class="w-form-fail">
-                      <div>Oops! Something went wrong while submitting the form.</div>
-                    </div>
+                    <form id="support-profit-form" name="email-form" data-name="Email Form" method="get" class="form-2"><label for="support-profit-amount" class="field_label">Amount</label><input class="text_field w-input" maxlength="256" name="name" data-name="Name" placeholder="" type="text" id="support-profit-amount"><label for="support-profit-ratio" class="field_label">Ratio</label><input class="text_field w-input" maxlength="256" name="email" data-name="Email" placeholder="" type="text" id="support-profit-ratio" required=""><input type="submit" data-wait="Please wait..." class="form_submit_button w-button" value="Add Profit"></form>
                   </div>
                 </div>
                 <div class="support_menu_template profit">
