--- a/public/users.html
+++ b/public/users.html
@@ -15,8 +15,7 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon"><!--  Memberstack webflow package  -->
-  <script data-memberstack-app="app_clqmvp45w00ax0tqg049r2tzc" src="https://static.memberstack.com/scripts/v1/memberstack.js" type="text/javascript"></script>
+  <link href="images/webclip.png" rel="apple-touch-icon">
   <script defer="" src="js/dashboard.js" type="text/javascript"></script>
   <script defer="" src="js/bookmakers.js" type="text/javascript"></script>
 </head>
