fixed log in bug

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -63,7 +63,7 @@
           <form id="contact-form" name="wf-form-Email-Form" data-name="Email Form" method="get" class="form-4"><label for="phone-set-up" class="field_label">Phone</label><input class="text_field w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Enter Phone" type="tel" id="phone-set-up" required="">
             <div class="form_pending">
               <h1 class="h3 pending">Pending...</h1>
-            </div><input type="submit" data-wait="Please wait..." class="form_submit_button w-button" value="Submit">
+            </div><input type="submit" data-wait="Please wait..." class="form_submit_button" value="Submit">
           </form>
         </div>
         <div id="set-ups" class="setups">
