--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
 <body>
   <section class="section home">
     <div class="max_width_wrapper menu">
-      <a href="/register" class="button signup w-button">Sign Up</a>
-      <a href="/login" class="button login w-button">Log In</a>
+      <a href="/checkregister" class="button signup w-button">Sign Up</a>
+      <a href="/checklogin" class="button login w-button">Log In</a>
     </div>
     <div class="max_width_wrapper home_desc">
       <h1 class="h1 home">What We Do</h1>
