--- a/public/users.html
+++ b/public/users.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Feb 15 2024 16:57:12 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Feb 16 2024 12:07:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="658d9d61bddb427e1206a154" data-wf-site="650ebe656cf62f0b69298038">
 <head>
   <meta charset="utf-8">
@@ -15,9 +15,10 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon">
+  <link href="images/webclip.png" rel="apple-touch-icon"><!--  Memberstack webflow package  -->
   <script defer="" src="js/dashboard.js" type="text/javascript"></script>
   <script defer="" src="js/bookmakers.js" type="text/javascript"></script>
+  <script defer="" src="js/affiliate.js" type="text/javascript"></script>
 </head>
 <body class="body">
   <section class="main-content-section">
@@ -31,11 +32,8 @@
           <h1 class="item_title">Overview</h1>
         </div>
         <div class="accounts_menu_div">
-          <div id="accounts-menu-button" class="menu_button enabled">
+          <div id="accounts-menu-button" class="menu_button enabled accounts">
             <h1 class="item_title">Accounts</h1><img src="images/down-arrow_1.png" loading="lazy" alt="" class="image-14">
-            <div id="accounts-menu-button" class="menu_button enabled accounts"><img src="images/user-5.png" loading="lazy" alt="" class="image-5">
-              <h1 class="item_title">Accounts</h1>
-            </div>
           </div>
           <div id="sub-menu" class="sub_menu">
             <div id="submenu-1" class="menu_button enabled submenu">
@@ -70,7 +68,7 @@
         <div id="deposits-menu-button" class="menu_button enabled deposits"><img src="images/upload.png" loading="lazy" alt="" class="image-5">
           <h1 class="item_title">Deposits</h1>
         </div>
-        <div class="menu_button enabled">
+        <div id="affiliate-menu-button" class="menu_button enabled">
           <h1 class="item_title">Affiliate</h1>
         </div>
       </div>
@@ -1116,13 +1114,7 @@
       <div id="affiliate-container" class="add_affiliate_code">
         <h1 id="affiliate-header" class="heading-9">Add Affiliate Code</h1>
         <div class="form-block-8 w-form">
-          <form id="affiliate-form" name="email-form-2" data-name="Email Form 2" method="get" class="form-3" data-wf-page-id="658d9d61bddb427e1206a154" data-wf-element-id="251a3116-e304-fa92-ba16-47b403f89254"><label for="affiliate-form-value" class="field_label">Code</label><input class="text_field w-input" maxlength="256" name="name" data-name="Name" placeholder="" type="text" id="affiliate-form-value"><input type="submit" data-wait="Please wait..." class="form_submit_button w-button" value="Submit"></form>
-          <div class="success-message w-form-done">
-            <div class="text-block">Thank you! Your submission has been received!</div>
-          </div>
-          <div class="affiliate_title w-form-fail">
-            <div>Oops! Something went wrong while submitting the form.</div>
-          </div>
+          <form id="affiliate-form" name="email-form-2" data-name="Email Form 2" method="get" class="form-3"><label for="affiliate-form-value" class="field_label">Code</label><input class="text_field w-input" maxlength="256" name="name" data-name="Name" placeholder="" type="text" id="affiliate-form-value"><input type="submit" data-wait="Please wait..." class="form_submit_button w-button" value="Submit"></form>
         </div>
         <div id="affiliate-error" class="affiliate_error">
           <h1 class="heading-10">Affiliate Code Not Found</h1>
@@ -1130,13 +1122,6 @@
       </div>
     </div>
     <div id="container4" class="container affiliate">
-      <div class="generate_affiliate_code">
-        <h1 class="affiliate_generate_title">Your Affiliate Code</h1>
-        <h1 id="affiliate-code" class="affiliate_code_found">Code Not Found</h1>
-        <div class="information_holder visible">
-          <div id="affiliate-info" class="text-block-2 white visible"><strong>Code</strong><br><br>Your affiliate code is provided above. If you successfully refer someone to sign up, instruct them to input this code in the designated form located at the bottom of their overview section so you can be rewarded.<br><br><strong>Earnings<br><br></strong>Upon successfully referring an individual, you will receive an instant credit of £40 for each person referred.<br><br><strong>Getting Paid<br><br></strong>The credited amount of £40 for each referral will be transferred to your provided bank details within 24 hours of the affiliate code being applied, with no additional conditions or requirements.<br></div>
-        </div>
-      </div>
       <div class="affiliate_stats_container">
         <div class="affiliate_money_profit">
           <h1 id="affiliate-earnings" class="affiliate_stats_title counter">£0</h1>
@@ -1145,6 +1130,29 @@
         <div class="affiliate_money_profit rhs">
           <h1 id="affiliate-signups" class="affiliate_stats_title counter">0</h1>
           <h1 class="stats_desc">Sign Ups</h1>
+        </div>
+        <div class="affiliate_money_profit rhs">
+          <h1 id="affiliate-fe" class="affiliate_stats_title counter">£0</h1>
+          <h1 class="stats_desc">Future Earnings</h1>
+        </div>
+      </div>
+      <div id="affiliate-template-container" class="generate_affiliate_code">
+        <div class="affiliate_code_box">
+          <h1 class="affiliate_generate_title">Your Affiliate Code</h1>
+          <h1 id="affiliate-code" class="affiliate_code_found">Code Not Found</h1>
+        </div>
+        <div class="affiliate_signups_title">
+          <h1 class="affiliate_generate_title">Your Sign Ups</h1>
+          <div class="text white">Each person must make at least 10 accounts before you get you unlock your earnings!</div>
+        </div>
+        <div id="affiliate-template" class="affiliate_template">
+          <h1 id="affiliate-name" class="h3 affiliate">Full Name</h1>
+          <div class="div-block">
+            <div class="affiliate_top_row">
+              <h1 class="h3 affiliate">Accounts Made:</h1>
+              <h1 id="affiliate-accounts-made" class="h3 affiliate bold">0</h1>
+            </div>
+          </div>
         </div>
       </div>
     </div>
