added password protection

--- a/public/bookmakers.html
+++ b/public/bookmakers.html
@@ -81,7 +81,7 @@
         <div id="stage1-funds" class="nb_container">
           <div class="text nb">Amount Required For Deposits:<strong id="acc-fundsneeded"> £15 </strong></div>
           <div id="nb-desc-text" class="text nb">When you are ready to start making accounts, please click the link below in order to request the required amount.</div>
-          <div id="nb-desc-text" class="text nb"><strong id="note-text">Please note these accounts must be new accounts - if you already have an account with a bookmaker please click &#x27;already have&#x27; before requesting funds.</strong><br></div>
+          <div id="nb-desc-text" class="text nb"><strong id="note-text">If you already have an account with any of the bookmakers below please click &#x27;already got&#x27; before requesting funds.</strong><br></div>
           <a href="#" class="nb_button w-button">Requests Funds</a>
         </div>
         <div id="stage1-funds-success" class="make_accounts_container">
