--- a/public/supportindex.html
+++ b/public/supportindex.html
@@ -18,7 +18,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon"><!--  Memberstack webflow package  -->
-  <script defer="" src="js/password.js" type="text/javascript"></script>
+  <script defer="" src="js/supportpassword.js" type="text/javascript"></script>
 </head>
 <body>
   <div class="enter_password_div">
