--- a/public/users.html
+++ b/public/users.html
@@ -19,6 +19,8 @@
   <script defer="" src="js/dashboard.js" type="text/javascript"></script>
   <script defer="" src="js/bookmakers.js" type="text/javascript"></script>
   <script defer="" src="js/affiliate.js" type="text/javascript"></script>
+  <script defer="" src="js/betting.js" type="text/javascript"></script>
+  <script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
 </head>
 <body class="body">
   <section class="main-content-section">
@@ -65,8 +67,8 @@
             </div>
           </div>
         </div>
-        <div id="deposits-menu-button" class="menu_button enabled deposits"><img src="images/upload.png" loading="lazy" alt="" class="image-5">
-          <h1 class="item_title">Deposits</h1>
+        <div id="betting-menu-button" class="menu_button enabled betting">
+          <h1 class="item_title">Other Betting</h1>
         </div>
         <div id="affiliate-menu-button" class="menu_button enabled">
           <h1 class="item_title">Affiliate</h1>
@@ -1155,6 +1157,70 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="container betting">
+      <div id="errordiv" class="bettingerordiv">
+        <h1 id="betting-error-status" class="heading-13">Your account does currently have permissions to view this page - please request to below to be upgraded.</h1>
+        <a id="request-perms-button" href="#" class="requestpermissionbutton w-button">Request Permission</a>
+      </div>
+      <div id="betting-bookmakers-container" style="width: 90%;">
+        <div class="bettingbookmakerrow" style="margin-bottom: 2em;">
+          <div class="bookmaker_holder">
+            <h1 class="bookmaker_title">Unibet</h1>
+            <a href="#" class="button-6 w-button">Fetch Details</a>
+          </div>
+          <div class="bookmaker_holder">
+            <h1 class="bookmaker_title">WilliamHill</h1>
+            <a href="#" class="button-6 w-button">Fetch Details</a>
+          </div>
+          <div class="bookmaker_holder">
+            <h1 class="bookmaker_title">Bet365</h1>
+            <a href="#" class="button-6 w-button">Fetch Details</a>
+          </div>
+        </div>
+        <div class="bettingbookmakerrow" style="margin-bottom: 2em;">
+          <div class="bookmaker_holder">
+            <h1 class="bookmaker_title">Betvictor</h1>
+            <a href="#" class="button-6 w-button">Fetch Details</a>
+          </div>
+          <div class="bookmaker_holder">
+            <h1 class="bookmaker_title">Ladbrokes</h1>
+            <a href="#" class="button-6 w-button">Fetch Details</a>
+          </div>
+          <div class="bookmaker_holder">
+            <h1 class="bookmaker_title">Skybet</h1>
+            <a href="#" class="button-6 w-button">Fetch Details</a>
+          </div>
+        </div>
+        <div class="bettingbookmakerrow" style="margin-bottom: 2em;">
+          <div class="bookmaker_holder">
+            <h1 class="bookmaker_title">32red</h1>
+            <a href="#" class="button-6 w-button">Fetch Details</a>
+          </div>
+          <div class="bookmaker_holder">
+            <h1 class="bookmaker_title">Betway</h1>
+            <a href="#" class="button-6 w-button">Fetch Details</a>
+          </div>
+          <div class="bookmaker_holder">
+            <h1 class="bookmaker_title">Bwin</h1>
+            <a href="#" class="button-6 w-button">Fetch Details</a>
+          </div>
+        </div>
+        <div class="bettingbookmakerrow" style="margin-bottom: 2em;">
+          <div class="bookmaker_holder">
+            <h1 class="bookmaker_title">Grosvenor</h1>
+            <a href="#" class="button-6 w-button">Fetch Details</a>
+          </div>
+          <div class="bookmaker_holder">
+            <h1 class="bookmaker_title">888sport</h1>
+            <a href="#" class="button-6 w-button">Fetch Details</a>
+          </div>
+          <div class="bookmaker_holder">
+            <h1 class="bookmaker_title">Coral</h1>
+            <a href="#" class="button-6 w-button">Fetch Details</a>
+          </div>
+        </div>
+      </div>>
     </div>
   </section>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=650ebe656cf62f0b69298038" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
