--- a/public/support.html
+++ b/public/support.html
@@ -95,6 +95,7 @@
           <h1 id="support-menu-accounts" class="supportmenutitle active">Accounts</h1>
           <h1 id="support-menu-fr" class="supportmenutitle">Fund Requests</h1>
           <h1 id="support-menu-affiliate" class="supportmenutitle">Affiliate</h1>
+          <h1 id="support-menu-ob" class="supportmenutitle">Other Betting</h1>
         </div>
         <div id="accountssubmenu" class="supportusermenu">
           <h1 id="support-qbnotplaced" class="supportmenutitle active">qb not placed</h1>
@@ -151,6 +152,34 @@
           <h1 id="support-fr-amount" class="h5 white support light">Amount: £25</h1>
           <a id="support-fr-complete" href="#" class="completebutton w-button">Complete</a>
         </div>
+      </div>
+
+      <div id="proxy-template" class="supportotherbettingproxy">
+        <div class="proxydetailsdiv">
+          <h1 id="proxy-provider" class="h5 white support">proxy provider</h1>
+          <div class="w-form">
+            <form id="proxy-provider-form" name="email-form" data-name="Email Form" method="get" class="proxy_form"><label for="proxy-provider-value" class="field_label supportform">New Value</label><input class="text_field w-input" maxlength="256" name="name" data-name="Name" placeholder="" type="text" id="proxy-provider-value"><input type="submit" data-wait="Please wait..." class="form_submit_button inverted w-button" value="Submit"></form>
+          </div>
+        </div>
+        <div class="proxydetailsdiv">
+          <h1 id="proxy-country" class="h5 white support">proxy country</h1>
+          <div class="w-form">
+            <form id="proxy-country-form" name="email-form" data-name="Email Form" method="get" class="proxy_form"><label for="proxy-country-value" class="field_label supportform">New Value</label><input class="text_field w-input" maxlength="256" name="name-4" data-name="Name 4" placeholder="" type="text" id="proxy-country-value"><input type="submit" data-wait="Please wait..." class="form_submit_button inverted w-button" value="Submit"></form>
+          </div>
+        </div>
+        <div class="proxydetailsdiv">
+          <h1 id="vm-username" class="h5 white support">VM Username</h1>
+          <div class="w-form">
+            <form id="vm-username-form" name="email-form" data-name="Email Form" method="get" class="proxy_form"><label for="vm-username-value" class="field_label supportform">New Value</label><input class="text_field w-input" maxlength="256" name="name-3" data-name="Name 3" placeholder="" type="text" id="vm-username-value"><input type="submit" data-wait="Please wait..." class="form_submit_button inverted w-button" value="Submit"></form>
+          </div>
+        </div>
+        <div class="proxydetailsdiv">
+          <h1 id="vm-password" class="h5 white support">VM Password</h1>
+          <div class="w-form">
+            <form id="vm-password-form" name="email-form" data-name="Email Form" method="get" class="proxy_form"><label for="vm-password-value" class="field_label supportform">New Value</label><input class="text_field w-input" maxlength="256" name="name-2" data-name="Name 2" placeholder="" type="text" id="vm-password-value"><input type="submit" data-wait="Please wait..." class="form_submit_button inverted w-button" value="Submit"></form>
+          </div>
+        </div>
+      </div>
     </div>
     
   </section>
