fixed fund requests

--- a/public/support.html
+++ b/public/support.html
@@ -147,8 +147,8 @@
           </div>
         </div>
       </div>
-      <div id="support-fr-template" class="supportfrholder">
-        <div class="supportfrtemplate">
+      <div id="support-fr-template-holder" class="supportfrholder">
+        <div id="support-fr-template" class="supportfrtemplate">
           <h1 id="support-fr-amount" class="h5 white support light">Amount: £25</h1>
           <a id="support-fr-complete" href="#" class="completebutton w-button">Complete</a>
         </div>
