--- a/public/support.html
+++ b/public/support.html
@@ -181,6 +181,15 @@
         </div>
       </div>
     </div>
+    <div id="affiliate-template" class="affiliate_template">
+      <h1 id="affiliate-name" class="h3 affiliate">Full Name</h1>
+      <div class="div-block">
+        <div class="affiliate_top_row">
+          <h1 class="h3 affiliate">Accounts Made:</h1>
+          <h1 id="affiliate-accounts-made" class="h3 affiliate bold">0</h1>
+        </div>
+      </div>
+    </div>
     
   </section>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=650ebe656cf62f0b69298038" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
